@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <object name="portal_types">
-  <object name="DavizPresentation"
+  <object name="DavizVisualization"
     meta_type="Factory-based Type Information with dynamic views"/>
 </object>
